Changelog for LedgerSMB 1.1.0

* Utility included for near-real-time parts short email notifications.
* DB Updates now use one transaction per update file.
* Fixed Lynx support
* Batch printing now available for checks
* Warnings are printed when check stub is truncated
* Protection against duplicate transaction id's.
* FLOAT datatypes removed from database
* Sales Data Report added
* SL2LS.pl now dies if it cannot open the files.
* Corrected directory transversal bug

Changelog for LedgerSMB v 1.0.0p1
* Fixed directory transversal/arbitrary code execution vulnerability.

Changelog for LedgerSMB v 1.0.0

(Changes relative to the pre-fork SQL-Ledger 2.6.17)

* Corrected sessionid security hole allowing bypass of login to main application
* Corrected sessionid security hole allowing one to list logins and more.
* Changed acc_trans.amount to NUMERIC
* Tightened browser caching rules to prevent problems with back button.
* Added an open content manual to the main distribution.
* New logo. 
* Began whitespace reformatting of main application.