@@ -5,13 +5,13 @@
 # Simple script.  Right now, all that needs to be done is that the SL directory
 # needs to be deleted and the sql-ledger.conf needs to be renamed.
 
-$filedie = "To install manually:
-rename the sql-ledger.conf to ledger-smb.conf
-Delete the SL directory (optional but HIGHLY recommended)\n";
+$filedie = "To install manually:\n" .
+	"rename the sql-ledger.conf to ledger-smb.conf\n ".
+	"Delete the SL directory (optional but HIGHLY recommended)\n";
 open (SL, "< sql-ledger.conf") || die (
-"Could not open sql-ledger.conf: $! \n $filedie");
+	"Could not open sql-ledger.conf: $! \n $filedie");
 open (LS, "> ledger-smb.conf") || die (
-"Could not open ledger-smb.conf: $! \n $filedie");
+	"Could not open ledger-smb.conf: $! \n $filedie");
 
 while ($line = <SL>){
   print LS $line;
